create update user asyn with data AuthO